# HSE_Node

./: README.md
node_ws/src/tracking_node/: CMakeLists.txt  package.xml
node_ws/src/tracking_node/include/: image_converter.hpp  person_tracker.hpp
node_ws/src/tracking_node/src/tracking_node/: image_converter.cpp  person_tracker.cpp
